--- a/tree_menu/templates/tree_menu/index.html
+++ b/tree_menu/templates/tree_menu/index.html
@@ -4,7 +4,7 @@
 {% block content %}
     <h1>Tree Menu Example</h1>
     
-    <div class="menu-container">
+    <div class="container">
         {% draw_menu 'main_menu' %}
     </div>
     
